some landing pages changes

--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 ---
 title: The TAPAS Team
 description: We are a truly interdisciplinary project involving geneticists, computer scientists, agrifood experts, earth observation scientists and economists
-image: https://www.lepapayer.com/pictures-casamance/hotel-capskirring-senegal-lepapayer-ecolodge-casamance-excursion-pirogue.jpg
+image: ../images/nigerdelta.png
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Our team...</h1>
-			<p class="subtext editable">We are a truly interdisciplinary project involving plant scientists, computer scientists, agrifood experts, earth observation scientists and economists. </p>
+			<h1 class="editable">The TAPAS Team</h1>
+			<p class="subtext editable">We are an interdisciplinary project involving plant scientists, computer scientists, agrifood experts, earth observation scientists and economists. </p>
 		</div>
 	</div>
 </section>
