--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ title: Home
 description: Landing page for the TAPAS Project
 image: images/448612-Earth-space.jpg
 bottom_image: https://www.ics-agri.com/photos/ics-senegal-yellow-sun-onion-crop-1140p.jpg
+vid_image: https://media.istockphoto.com/id/1433897253/photo/black-green-modern-abstract-background-with-space-for-design-gradient-light-and-dark-blurry.jpg?s=612x612&w=0&k=20&c=wz9jtBzRjplL73VLwy7VufIyOczslSYV7d-pbRHGl0c=
 ---
+
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
@@ -58,6 +60,12 @@ bottom_image: https://www.ics-agri.com/photos/ics-senegal-yellow-sun-onion-crop-
 				<h2 class="editable">Winner of the SFI AI for Societal Good Challenge 2021</h2>
 				<p class="subtext editable">TAPAS is funded by Science Foundtion Ireland and the Irish Government's Department of Foreign Affairs.</p>
 			</div>
+		</div>
+	</section>
+
+	<section class="hero" style="background-image: url({% include relative-src.html src=page.vid_image %})">
+		<div class="inner-hero text-container">
+				<iframe width="1024" height="512" src="https://www.youtube.com/embed/srHEehTNJcs?si=vIJCnHSjXsmR8NJQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		</div>
 	</section>
 </div>
